# salary_calculator

./: Makefile  README.md  pyproject.toml
src/salary_calculator/brackets/: __init__.py  bracket.py
src/salary_calculator/brackets/reader/: base.py  yaml.py
tests/component/: test_tax_bracket.py  test_tax_brackets_reader.py
tests/component/resources/: sample.yml
