[tool.poetry]
name = "salary-calculator"
version = "0.1.0"
description = "A net salary calculator and other utilities."
authors = ["Tonivalle <tonivalle15@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
mypy = "^1.11.2"
pytest = "^8.3.2"
types-pyyaml = "^6.0.12.20240808"

[tool.mypy]
pretty = true
show_error_codes = true
show_error_context = true
implicit_reexport = true
namespace_packages = true

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", # Errors (pycodestyle)
    "F", # PyFlakes
    "PL", # PyLint
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # imported but unused
]
"tests/*" = [
    "PLR2004" # Magic value used in comparison
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"